--- a/pkg/repository/v1/sqlcv1/sqlc.yaml
+++ b/pkg/repository/v1/sqlcv1/sqlc.yaml
@@ -28,6 +28,7 @@ sql:
       - ../../../../sql/schema/v0.sql
       - ../../../../sql/schema/v1-core.sql
       - ../../../../sql/schema/v1-olap.sql
+      - ../../../../sql/schema/pg-stubs.sql
       - ./concurrency-additional-tables.sql
     strict_order_by: false
     gen:
