--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,113 @@
-version: "3.8"
 services:
   postgres:
-    image: postgres:15.6
-    command: postgres -c 'max_connections=500' -c 'shared_preload_libraries=auto_explain' -c 'auto_explain.log_min_duration=1000' -c 'auto_explain.log_analyze=on' -c 'auto_explain.log_verbose=on' -c 'auto_explain.log_timing=on' -c 'auto_explain.log_buffers=on' -c 'auto_explain.log_wal=on' -c 'auto_explain.log_triggers=on' -c 'auto_explain.log_format=text'
+    image: 'postgres:15.6'
+    shm_size: 4g
+    command: "postgres -c 'max_connections=1000'"
     restart: always
     environment:
-      - POSTGRES_USER=hatchet
-      - POSTGRES_PASSWORD=hatchet
-      - POSTGRES_DB=hatchet
-    ports:
-      - "5431:5432"
-    volumes:
-      - hatchet_postgres_data:/var/lib/postgresql/data
-    shm_size: 4g
-  rabbitmq:
-    image: "rabbitmq:3-management"
-    hostname: "rabbitmq"
-    ports:
-      - "5672:5672" # RabbitMQ
-      - "15672:15672" # Management UI
-    environment:
-      RABBITMQ_DEFAULT_USER: "user"
-      RABBITMQ_DEFAULT_PASS: "password"
-    volumes:
-      - "hatchet_rabbitmq_data:/var/lib/rabbitmq"
-      - "hatchet_rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf" # Configuration file mount
+      - POSTGRES_USER=$SERVICE_USER_POSTGRES
+      - POSTGRES_PASSWORD=$SERVICE_PASSWORD_POSTGRES
+      - 'POSTGRES_DB=${POSTGRES_DB:-hatchet}'
     healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      test:
+        - CMD-SHELL
+        - 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}'
+      interval: 5s
+      timeout: 20s
+      retries: 10
+    volumes:
+      - 'hatchet_postgres_data:/var/lib/postgresql/data'
+  rabbitmq:
+    image: 'rabbitmq:3-management'
+    hostname: rabbitmq
+    environment:
+      - SERVICE_URL_RABBITMQ_15672
+      - RABBITMQ_DEFAULT_USER=$SERVICE_USER_RABBITMQ
+      - RABBITMQ_DEFAULT_PASS=$SERVICE_PASSWORD_RABBITMQ
+      - 'PORT=${RABBITMQ_PORT:-5672}'
+    healthcheck:
+      test: 'rabbitmq-diagnostics -q ping'
+      interval: 5s
+      timeout: 30s
+      retries: 10
+    volumes:
+      - 'rabbitmq-data:/var/lib/rabbitmq/'
+  migration:
+    image: 'ghcr.io/hatchet-dev/hatchet/hatchet-migrate:latest'
+    command: /hatchet/hatchet-migrate
+    restart: 'no'
+    exclude_from_hc: true
+    environment:
+      - 'DATABASE_URL=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/$POSTGRES_DB'
+    depends_on:
+      postgres:
+        condition: service_healthy
+  setup-config:
+    image: 'ghcr.io/hatchet-dev/hatchet/hatchet-admin:latest'
+    command: '/hatchet/hatchet-admin quickstart --skip certs --generated-config-dir /hatchet/config --overwrite=false'
+    restart: 'no'
+    environment:
+      - 'DATABASE_URL=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/$POSTGRES_DB'
+      - 'SERVER_TASKQUEUE_RABBITMQ_URL=amqp://$SERVICE_USER_RABBITMQ:$SERVICE_PASSWORD_RABBITMQ@rabbitmq:5672/'
+      - 'SERVER_AUTH_COOKIE_DOMAIN=${SERVER_AUTH_COOKIE_DOMAIN:-localhost:8080}'
+      - 'SERVER_AUTH_COOKIE_INSECURE=${SERVER_AUTH_COOKIE_INSECURE:-t}'
+      - 'SERVER_GRPC_BIND_ADDRESS=${SERVER_GRPC_BIND_ADDRESS:-0.0.0.0}'
+      - 'SERVER_GRPC_INSECURE=${SERVER_GRPC_INSECURE:-t}'
+      - 'SERVER_GRPC_BROADCAST_ADDRESS=${SERVER_GRPC_BROADCAST_ADDRESS:-localhost:7077}'
+      - SERVER_DEFAULT_ENGINE_VERSION=V1
+      - 'SERVER_INTERNAL_CLIENT_INTERNAL_GRPC_BROADCAST_ADDRESS=${SERVER_INTERNAL_CLIENT_INTERNAL_GRPC_BROADCAST_ADDRESS:-hatchet-engine:7077}'
+    volumes:
+      - 'hatchet_certs:/hatchet/certs'
+      - 'hatchet_config:/hatchet/config'
+    depends_on:
+      migration:
+        condition: service_completed_successfully
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+  hatchet-engine:
+    image: 'ghcr.io/hatchet-dev/hatchet/hatchet-engine:latest'
+    command: '/hatchet/hatchet-engine --config /hatchet/config'
+    restart: on-failure
+    depends_on:
+      setup-config:
+        condition: service_completed_successfully
+      migration:
+        condition: service_completed_successfully
+    environment:
+      - 'DATABASE_URL=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/$POSTGRES_DB'
+      - 'SERVER_GRPC_BIND_ADDRESS=${SERVER_GRPC_BIND_ADDRESS:-0.0.0.0}'
+      - 'SERVER_GRPC_INSECURE=${SERVER_GRPC_INSECURE:-t}'
+      - READ_REPLICA_ENABLED=true
+      - READ_REPLICA_DATABASE_URL=postgresql://hatchet:hatchet@pg-replica:5432/hatchet
+      - READ_REPLICA_MAX_CONNS=200
+      - READ_REPLICA_MIN_CONNS=50
+    volumes:
+      - 'hatchet_certs:/hatchet/certs'
+      - 'hatchet_config:/hatchet/config'
+  hatchet-dashboard:
+    image: 'ghcr.io/hatchet-dev/hatchet/hatchet-dashboard:latest'
+    command: 'sh ./entrypoint.sh --config /hatchet/config'
+    depends_on:
+      setup-config:
+        condition: service_completed_successfully
+      migration:
+        condition: service_completed_successfully
+    environment:
+      - 'DATABASE_URL=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/$POSTGRES_DB'
+      - SERVICE_URL_HATCHET_80
+    volumes:
+      - 'hatchet_certs:/hatchet/certs'
+      - 'hatchet_config:/hatchet/config'
 
-volumes:
-  hatchet_postgres_data:
-  hatchet_rabbitmq_data:
-  hatchet_rabbitmq.conf:
+  worker:
+    container_name: "worker"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: python src/hatchet_tutorial/worker.py
+    env_file: .env
+    depends_on:
+      hatchet-engine:
+        condition: service_started
